--- a/مسلسل جودر.html
+++ b/مسلسل جودر.html
@@ -322,7 +322,7 @@ document.addEventListener('DOMContentLoaded', function() {
 <div align="center" >
 <div class="container">
 <div id="page">
-<div class="section" data-section="بيت الرفاعى">
+<div class="section" data-section="مسلسل جودر">
      
          
 <button class="button"><img src="https://i.imgur.com/f7HoFSB.jpg" alt="app tv">
