--- a/مسلسل بيت الرفاعى.html
+++ b/مسلسل بيت الرفاعى.html
@@ -331,7 +331,8 @@ document.addEventListener('DOMContentLoaded', function() {
                         <!-- إضافة شكل الأرقام الدائرية -->
                         <div class="number-container">  <div> 
 <img class="watched-icon" src="https://static.thenounproject.com/png/1970476-200.png" alt="Watched Icon" style="display: none;"></div>
-
+   <a href="intent://aHR0cHM6Ly9kbC5kcm9wYm94LmNvbS9zY2wvZmkvYmJqbW80MHlybzN2OThlazc5dzFtLzEudHM/
+cmxrZXk9dnZhaGo3MWRocjd2andlaDJuc25kb2dsciZkbD0w#Intent;scheme=xmtv;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">HD</div></a>
                                         <a href="intent://aHR0cHM6Ly9jYWNoZWQtY2RuLTE2LXBvcnRhYmxlLTFkc2EuZGlhbHltb3Rpb24ub25saW5lL2hs
 cy9ta2toaHFiZmNpc2w0eno2cWs2dml4cTNmNXBkZ3RpYmIzcHFveXFzMyxha2dzeXJ3dHFtYjZl
 NWR3dXlxLGpzZ3N5cnd0cW1icjQ1dmxzZGEsLnVybHNldC9tYXN0ZXIubTN1OA==#Intent;scheme=xmtv;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">1</div></a>
