--- a/مسلسل الكبير اوى 8.html
+++ b/مسلسل الكبير اوى 8.html
@@ -332,6 +332,9 @@ document.addEventListener('DOMContentLoaded', function() {
                         <div class="number-container">  <div> 
 <img class="watched-icon" src="https://static.thenounproject.com/png/1970476-200.png" alt="Watched Icon" style="display: none;"></div>
 
+
+                                        <a href="intent://aHR0cHM6Ly9kbC5kcm9wYm94LmNvbS9zY2wvZmkvcjh6ZTJoamt5OW8zZHR3NDllMjcxL2thYmly
+LThoMS5tcDQ/cmxrZXk9bDBoazRtNGU0aThnN2dldXVyaDR4b25taSZkbD0w#Intent;scheme=xmtv;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">HD</div></a>
                                         <a href="intent://aHR0cHM6Ly90Z2I0LnRvcDE1dG9wLnNob3AvdGhpM2R0bmt6ZDVkL0VsLkthYmVlci5Bd3kuOC5T
 MDFFMDEud2VjaWltYS5hdXRvcy5tcDQuaHRtbD9LZXk9M2lvcXI2ZkUzWk0xVEVIVkNDUng4QSZF
 eHBpcmVzPTE3MTAxOTg3NDE=#Intent;scheme=xmtv;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">1</div></a>
