--- a/مسلسل الحشاشين.html
+++ b/مسلسل الحشاشين.html
@@ -332,6 +332,8 @@ document.addEventListener('DOMContentLoaded', function() {
                         <div class="number-container">  <div> 
 <img class="watched-icon" src="https://static.thenounproject.com/png/1970476-200.png" alt="Watched Icon" style="display: none;"></div>
 
+  <a href="intent://aHR0cHM6Ly9kbC5kcm9wYm94LmNvbS9zY2wvZmkvNWo5N2ExZ2ZuaDloYTBmczU4OWZuLzEudHM/
+cmxrZXk9bXFjOXYyMjIwaTQ1NWxvYjV3bmQyODd3aiZkbD0w#Intent;scheme=xmtv;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">hd</div></a>
                                         <a href="intent://aHR0cHM6Ly90Z2I0LnRvcDE1dG9wLnNob3AvaDUwcW1vZ25qYmxnL0FsLkhhc2hhc2hpbi5TMDEu
 RTAxLjcyMHAuSERUVi5XZWNpbWEudHViZS5tcDQuaHRtbD9LZXk9OUdKVThVWXZVUlBrdENmS1Jl
 c2VvUSZFeHBpcmVzPTE3MTAxOTkwNzU=#Intent;scheme=xmtv;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">1</div></a>
