--- a/مسلسل العتاولة.html
+++ b/مسلسل العتاولة.html
@@ -356,15 +356,14 @@ anhicHB1azdpa3kzM3N3NXY0eTdkeG1hejJybXVreDRjaWEsLnVybHNldC9tYXN0ZXIubTN1OA==
                         <!-- إضافة شكل الأرقام الدائرية -->
                         <div class="number-container">  <div> 
 <img class="watched-icon" src="https://static.thenounproject.com/png/1970476-200.png" alt="Watched Icon" style="display: none;"></div>
-                                            <a href="intent://aHaHR0cHM6Ly9kbC5kcm9wYm94LmNvbS9zY2wvZmkvZGFoZWtnZXNuOHVmaGp4cGF2dDcxLzItSEQu
-bXA0P3Jsa2V5PW8zOWVwcTB4eWNydWh5YmkzbG0xcnZsc3EmZGw9MA==
+                                            <a href="intent://aHR0cHM6Ly9kbC5kcm9wYm94LmNvbS9zY2wvZmkvNjM5cmdrcm42andmMHpzb21ldDdiLzItSEQu
+bXA0P3Jsa2V5PW5kMzI2am9jejhjdzY4NmJhZzlrcHo5MmwmZGw9MA==
 #Intent;scheme=xmtv;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number">hd</div></a>
-                                        <a href="intent://aHR0cHM6Ly90Z2I0LnRvcDE1dG9wLnNob3AvZnFwcW1zZ2NtMjU4L0FsLkF0YXdsYS5TMDFFMDEu
-NzIwcC53ZWNpaW1hLmF1dG9zLm1wNC5odG1sP0tleT11aXEzMm1kR2Zya0QteHcyWWpwQURRJkV4
-cGlyZXM9MTcxMDE5ODgxMg==#Intent;scheme=xmtv;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">1</div></a>
+                                        <a href="intent://aHR0cHM6Ly9kbC5kcm9wYm94LmNvbS9zY2wvZmkvZGFoZWtnZXNuOHVmaGp4cGF2dDcxLzItSEQu
+bXA0P3Jsa2V5PW8zOWVwcTB4eWNydWh5YmkzbG0xcnZsc3EmZGw9MA=="><div id="remot" tabindex="1" class="number">1</div></a>
                                         
                                               <a href="intent://aHR0cHM6Ly9kbC5kcm9wYm94LmNvbS9zY2wvZmkvZGFoZWtnZXNuOHVmaGp4cGF2dDcxLzItSEQu
-bXA0P3Jsa2V5PW8zOWVwcTB4eWNydWh5YmkzbG0xcnZsc3EmZGw9MA==#Intent;scheme=xmtv;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number" >2</div></a> 
+bXA0P3Jsa2V5PW8zOWVwcTB4eWNydWh5YmkzbG0xcnZsc3EmZGw9MA=="><div id="remot" tabindex="1" class="number" >2</div></a> 
 
                                         <a href="https://p4.hd-cdn.xyz/embed-8mvxjadx8ezy.html"><div id="remot" tabindex="1" class="number">3</div></a>
                           
