--- a/مسلسل المعلم.html
+++ b/مسلسل المعلم.html
@@ -365,7 +365,7 @@ emZzcXkmYXNuPTM2OTI1#Intent;scheme=xmtv;package=co.wuffy.player;end "><div id="r
 
 <a href="https://cimacafe.net/embed-play/21710156819"><div id="remot" tabindex="1" class="number" >1</div></a> 
 
-<a href="https://qwe4.viidhdr.shop/embed-u9du52lsdo4h.html"><div id="remot" tabindex="1" class="number">2</div></a>
+<a href="https://rawcdn.githack.com/ahmadmk2023/ramadan-2024/a7e412c4c9819798902df751ee9fc07e6e450164/Al%20Maalem%20-%20Season%201%20-%20Episode%20%202.html"><div id="remot" tabindex="1" class="number">2</div></a>
                               
     </div ></button>             
     
