--- a/مسلسل حق عرب.html
+++ b/مسلسل حق عرب.html
@@ -351,13 +351,11 @@ cSw0eG9qMjM2MnNpemRkYXh1anNhLC51cmxzZXQvbWFzdGVyLm0zdTg=#Intent;scheme=xmtv;pack
                         <div class="number-container">  <div> 
 <img class="watched-icon" src="https://static.thenounproject.com/png/1970476-200.png" alt="Watched Icon" style="display: none;"></div>
 
-                                        <a href="intent://aHR0cHM6Ly9kbC5kcm9wYm94LmNvbS9zY2wvZmkvM29vMDJ4ZHN5amhmbzUxcWxsZjBhL2hhcXVu
-LWVhcmFiLVMwMUUwMi5tcDQ/cmxrZXk9MGNnNTgxbzhvODBpbjk5dG42MXpiZmZjcSZkbD0w#Intent;scheme=xmtv;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">hd</div></a>
+                                        <a href="intent://aHR0cHM6Ly9kbC5kcm9wYm94LmNvbS9zY2wvZmkvc2VzdXMyYWJkOG15dzhoZTNmN2huL2hhOS1h
+cmFiLWUyLm1wND9ybGtleT1wanJ4Y3Q2c242bjVnaWMzN2pseGxrNWp4JmRsPTA=#Intent;scheme=xmtv;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">hd</div></a>
                                         
-                                              <a href="intent://aHR0cHM6Ly9mYXN0LWNkbi1jaGFzaC0yNi15dWouZGlhbHltb3Rpb24ub25saW5lL2hscy9ta2to
-aGVqZWNpc2w0eno2cWs2dmlkYTZmd3N2dzV0em5wNDdlY2k3Zyw3emcyYTJwb3V5MndrM21xaG1h
-LHcyZzJhMnBvdXkycDY3Z25kcXEsdG93MmEycG91eXZ1czJtNWZqcSwudXJsc2V0L21hc3Rlci5t
-M3U4#Intent;scheme=xmtv;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number" >2</div></a> 
+                                              <a href="intent://aHR0cHM6Ly9kbC5kcm9wYm94LmNvbS9zY2wvZmkvc2VzdXMyYWJkOG15dzhoZTNmN2huL2hhOS1h
+cmFiLWUyLm1wND9ybGtleT1wanJ4Y3Q2c242bjVnaWMzN2pseGxrNWp4JmRsPTA=#Intent;scheme=xmtv;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number" >2</div></a> 
 
                                         <a href="https://p4.hd-cdn.xyz/embed-f1rkbd1czd7j.html#Intent;scheme=xmtv;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">3</div></a>
                               
