--- a/مسلسل محارب.html
+++ b/مسلسل محارب.html
@@ -356,7 +356,20 @@ dHM/cmxrZXk9YWNpbW5yNmRnMXJiM21maGR5dTZrYm53cyZkbD0w#Intent;scheme=xmtv;package=
                 <a href="https://p4.hd-cdn.xyz/embed-pyhit0vkgzy9.html"><div id="remot" tabindex="1" class="number" >1</div></a>                          
                                               <a href="https://qwe4.viidhdr.shop/embed-ajd9rljg0fwd.html"><div id="remot" tabindex="1" class="number" >2</div></a> 
 
+    <button class="button"><img src="https://i.imgur.com/acfqMQo.jpg" alt="app tv">
+        <div class="lkhat1"> episode-3</div>
+   <div class="khlfia">  سيرفرات المشاهدة</div> 
+                        <!-- إضافة شكل الأرقام الدائرية -->
+                        <div class="number-container">  <div> 
+<img class="watched-icon" src="https://static.thenounproject.com/png/1970476-200.png" alt="Watched Icon" style="display: none;"></div>
 
+                                        <a href="intent://aHR0cHM6Ly9kbC5kcm9wYm94LmNvbS9zY2wvZmkvaGVlaWRrdzM3bDViMHRvY21ydWprL2xtb2hh
+cmliLTMubXA0P3Jsa2V5PWE5czFzdjZybmlrbm5ydHB6ZDYwbWRtOTUmZGw9MA==#Intent;scheme=xmtv;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">hd</div></a>
+
+                <a href="intent://aHR0cHM6Ly9kbC5kcm9wYm94LmNvbS9zY2wvZmkvaGVlaWRrdzM3bDViMHRvY21ydWprL2xtb2hh
+cmliLTMubXA0P3Jsa2V5PWE5czFzdjZybmlrbm5ydHB6ZDYwbWRtOTUmZGw9MA==#Intent;scheme=xmtv;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number" >1</div></a>                          
+                                              <a href="intent://aHR0cHM6Ly9kbC5kcm9wYm94LmNvbS9zY2wvZmkvaGVlaWRrdzM3bDViMHRvY21ydWprL2xtb2hh
+cmliLTMubXA0P3Jsa2V5PWE5czFzdjZybmlrbm5ydHB6ZDYwbWRtOTUmZGw9MA==#Intent;scheme=xmtv;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number" >2</div></a> 
                               
     </div ></button>        
     
