--- a/مسلسل العتاولة.html
+++ b/مسلسل العتاولة.html
@@ -375,10 +375,10 @@ bXA0P3Jsa2V5PW8zOWVwcTB4eWNydWh5YmkzbG0xcnZsc3EmZGw9MA=="><div id="remot" tabind
                         <!-- إضافة شكل الأرقام الدائرية -->
                         <div class="number-container">  <div> 
 <img class="watched-icon" src="https://static.thenounproject.com/png/1970476-200.png" alt="Watched Icon" style="display: none;"></div>
-                                            <a href="intent://aHR0cHM6Ly9kbC5kcm9wYm94LmNvbS9zY2wvZmkvd3l2NmJwanZuNXl5anA0NThwZ3Q3LzNhdGF3
-bGEtMy5tcDQ/cmxrZXk9bnduY2VtczkybTJtcWZwMG5hcXBxanludCZkbD0w
+                                            <a href="intent://aHR0cHM6Ly9kbC5kcm9wYm94LmNvbS9zY2wvZmkvOTV1a245anhobmlzZmk3aHl0MHZyLzMtSEQu
+bWt2P3Jsa2V5PWpiemZjejkzcG96MnM2N2VnbGFscnN2MnQmZGw9MA==
 #Intent;scheme=xmtv;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number">hd</div></a>
-                                        <a href="intent://https://egbist.com/embed-play/1018634"><div id="remot" tabindex="1" class="number">1</div></a>
+                                        <a href="https://egbist.com/embed-play/1018634"><div id="remot" tabindex="1" class="number">1</div></a>
 
                                         <a href="https://egbist.com/embed-play/1018634"><div id="remot" tabindex="1" class="number">2</div></a>
     </div ></button>          
@@ -392,14 +392,12 @@ bGEtMy5tcDQ/cmxrZXk9bnduY2VtczkybTJtcWZwMG5hcXBxanludCZkbD0w
                         <div class="number-container">  <div> 
 <img class="watched-icon" src="https://static.thenounproject.com/png/1970476-200.png" alt="Watched Icon" style="display: none;"></div>
 
-<a href="intent://aHR0cHM6Ly9kbC5kcm9wYm94LmNvbS9zY2wvZmkvY3BqNnlkb2l3ZnV3Z2ZwejZ6djJ6LzNhdGF3
-bGEtNC5tcDQ/cmxrZXk9aWt1N3Rydjc0djEyNHdvMTdhMWlqNTJzMCZkbD0w
+<a href="intent://aHR0cHM6Ly9kbC5kcm9wYm94LmNvbS9zY2wvZmkvejUxb3BkMm4zMTQyZmxoYzJ4bDdzLzQtSEQu
+bWt2P3Jsa2V5PWhyYnZiZ2Q2ZjRzb2IzMzJnMzdpM2tkeDcmZGw9MA==
 #Intent;scheme=xmtv;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number">hd</div></a>
 
-<a href="intent://a3NhLm1uY2RuLmNvbS9vdXQvdjEvMTlhNGM1NmI4NmQ1NDkwNmJkN2ViZWYzZjNhMDMwOWMvMjIx
-NjYzMzNkNTFhNGQ1Mjg0NzgxNDRjYzMwZmMwNDgvNWI2NDliMzdiOGQ3NGUyMWEwMTY0YmYwMjU2
-ZThkM2EvMDdmZjk4MzVjNDI0NGI3YTk4OTcwN2UyYzhjNmE1YTUvaW5kZXhfdmlkZW9fMl8wX2lu
-aXQubXA0
+<a href="intent://aHR0cHM6Ly9kbC5kcm9wYm94LmNvbS9zY2wvZmkvejUxb3BkMm4zMTQyZmxoYzJ4bDdzLzQtSEQu
+bWt2P3Jsa2V5PWhyYnZiZ2Q2ZjRzb2IzMzJnMzdpM2tkeDcmZGw9MA==
 #Intent;scheme=xmtv;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number">0</div></a>
 
 <a href="https://egbist.com/embed-play/1018844"><div id="remot" tabindex="1" class="number">1</div></a>
