--- a/مسلسل المعلم.html
+++ b/مسلسل المعلم.html
@@ -376,7 +376,6 @@ emZzcXkmYXNuPTM2OTI1#Intent;scheme=xmtv;package=co.wuffy.player;end "><div id="r
                         <!-- إضافة شكل الأرقام الدائرية -->
                         <div class="number-container">  <div> 
 <img class="watched-icon" src="https://static.thenounproject.com/png/1970476-200.png" alt="Watched Icon" style="display: none;"></div>
-
                                         <a href="intent://aHR0cHM6Ly9kbC5kcm9wYm94LmNvbS9zY2wvZmkvM3NmbWs1dTR2dGdwbWprZ29neWU0LzIudHM/
 cmxrZXk9ZGxkc3p4aGFiNTZ3YXlmZGIzZ2E0bWJ3aSZkbD0w#Intent;scheme=xmtv;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">hd</div></a>
             <a href="intent://aHR0cHM6Ly9neWwwaXdsZmMwLnN3LWNkbnN0cmVhbXdpc2guY29tL2hsczIvMDEvMDMzMDEvM2Iz
@@ -385,12 +384,50 @@ MWNSVnR4WjlybHVvJnM9MTcxMDI4ODEyMCZlPTEyOTYwMCZmPTE2NTA5MjU4JnNydj1neW9zdmQ3
 bzR5cnpmc3F5Jmk9MC40JnNwPTUwMCZwMT1neW9zdmQ3bzR5cnpmc3F5JnAyPWd5b3N2ZDdvNHly
 emZzcXkmYXNuPTM2OTI1#Intent;scheme=xmtv;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">hd</div></a>
 
-
 <a href="https://cimacafe.net/embed-play/31710277827"><div id="remot" tabindex="1" class="number">2</div></a>
-                              
     </div ></button>             
        
+    <button class="button"><img src="https://i.imgur.com/8m0W9Td.png" alt="app tv">
+        <div class="lkhat1"> episode-4</div>
+   <div class="khlfia">  سيرفرات المشاهدة</div> 
+                        <!-- إضافة شكل الأرقام الدائرية -->
+                        <div class="number-container">  <div> 
+<img class="watched-icon" src="https://static.thenounproject.com/png/1970476-200.png" alt="Watched Icon" style="display: none;"></div>
+                                        <a href="intent://aHR0cHM6Ly9kbC5kcm9wYm94LmNvbS9zY2wvZmkvYXc3ZjYzaWJlaWJzYXZ2ZWplYmJqLzQtSEQu
+dHM/cmxrZXk9Y2RoNnRtN2l0aDM5MTZyYXU2aXo1MTdnYSZkbD0w#Intent;scheme=xmtv;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">hd</div></a>
+
+<a href="https://hd1.hd-cdn.xyz/embed-jk75ggj2eeo3.html"><div id="remot" tabindex="1" class="number">1</div></a>
+
+<a href="https://cimacafe.net/embed-play/41710357292"><div id="remot" tabindex="1" class="number">2</div></a>
+    </div ></button>         
    
+       <button class="button"><img src="https://i.imgur.com/8m0W9Td.png" alt="app tv">
+        <div class="lkhat1"> episode-5</div>
+   <div class="khlfia">  سيرفرات المشاهدة</div> 
+                        <!-- إضافة شكل الأرقام الدائرية -->
+                        <div class="number-container">  <div> 
+<img class="watched-icon" src="https://static.thenounproject.com/png/1970476-200.png" alt="Watched Icon" style="display: none;"></div>
+                                        <a href="intent://aHR0cHM6Ly9kbC5kcm9wYm94LmNvbS9zY2wvZmkvcWg2ZDA4eTlqdDc1cWcwNThjNnV3LzUtSEQu
+dHM/cmxrZXk9cm92N3U5aHV4a2xjamgwaGM2bG5ob21hNSZkbD0w#Intent;scheme=xmtv;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">hd</div></a>
+
+<a href="https://hd1.hd-cdn.xyz/embed-cek8nsy3ma5q.html"><div id="remot" tabindex="1" class="number">1</div></a>
+
+<a href="https://cimacafe.net/embed-play/51710417030"><div id="remot" tabindex="1" class="number">2</div></a>
+    </div ></button> 
+   
+          <button class="button"><img src="https://i.imgur.com/8m0W9Td.png" alt="app tv">
+        <div class="lkhat1"> episode-6</div>
+   <div class="khlfia">  سيرفرات المشاهدة</div> 
+                        <!-- إضافة شكل الأرقام الدائرية -->
+                        <div class="number-container">  <div> 
+<img class="watched-icon" src="https://static.thenounproject.com/png/1970476-200.png" alt="Watched Icon" style="display: none;"></div>
+                                        <a href="intent://aHR0cHM6Ly9kbC5kcm9wYm94LmNvbS9zY2wvZmkvejBpc3l4NHA0cjVxOHMwbnM4Z3JmLzYtSEQu
+dHM/cmxrZXk9bWtheGNpcW5iNzAwenRjOW53aGg3OXR2MiZkbD0w#Intent;scheme=xmtv;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">hd</div></a>
+
+<a href="https://hd1.hd-cdn.xyz/embed-h1b23hxkc7bu.html"><div id="remot" tabindex="1" class="number">1</div></a>
+
+<a href="https://cimacafe.net/embed-play/61710508132"><div id="remot" tabindex="1" class="number">2</div></a>
+    </div ></button> 
    
   </div> 
          </div>
