--- a/مسلسل العتاولة.html
+++ b/مسلسل العتاولة.html
@@ -449,8 +449,7 @@ bWt2P3Jsa2V5PWhza2xzYjJwMnoxcTZucGR3Z3owcTA4ZmgmZGw9MA==
                         <div class="number-container">  <div> 
 <img class="watched-icon" src="https://static.thenounproject.com/png/1970476-200.png" alt="Watched Icon" style="display: none;"></div>
 
-<a href="intent:/aHR0cHM6Ly9kbC5kcm9wYm94LmNvbS9zY2wvZmkvd3RoZXdoMHhhdGlmYzltMHhqdHA0LzcubXA0
-P3Jsa2V5PWM0M2YzMnNuYnJnZ2t0bXg5cXRkZHpkNGEmZGw9MA==
+<a href="intent://https://dl.dropbox.com/scl/fi/3z4fqfxlmkflnxx3bpulr/7.mp4?rlkey=vw0nzfye9zecszubn2rkkrrin&dl=0
 #Intent;scheme=xmtv;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number">hd</div></a>
 
 <a href="https://egbist.com/embed-play/1019245"><div id="remot" tabindex="1" class="number">1</div></a>
@@ -459,22 +458,7 @@ P3Jsa2V5PWM0M2YzMnNuYnJnZ2t0bXg5cXRkZHpkNGEmZGw9MA==
     </div ></button>  
              <!-- +++++++++++++++++++++ -->
 
-<button class="button"><img src="https://shahid.mbc.net/mediaObject/2024/RAMADAN_OFFICIAL/Poster_Al_Atawla_ar/original/Poster_Al_Atawla_ar.jpg?version=1&type=webp" alt="app tv">
-        <div class="lkhat1"> episode-8</div>
-   <div class="khlfia">  سيرفرات المشاهدة</div> 
-                        <!-- إضافة شكل الأرقام الدائرية -->
-                        <div class="number-container">  <div> 
-<img class="watched-icon" src="https://static.thenounproject.com/png/1970476-200.png" alt="Watched Icon" style="display: none;"></div>
 
-<a href="intent://aHR0cHM6Ly9kbC5kcm9wYm94LmNvbS9zY2wvZmkvcDQ4bDB4aHE3MjkzaHR3aGNuaDU1LzYtSEQu
-bWt2P3Jsa2V5PWhza2xzYjJwMnoxcTZucGR3Z3owcTA4ZmgmZGw9MA==
-#Intent;scheme=xmtv;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number">hd</div></a>
-
-<a href="https://egbist.com/embed-play/1019245"><div id="remot" tabindex="1" class="number">1</div></a>
-
-<a href="https://hd1.hd-cdn.xyz/embed-b429w3iyok5q.html"><div id="remot" tabindex="1" class="number">2</div></a>
-    </div ></button>   
-    
   </div> 
          </div>
         </div>
