--- a/مسلسل محارب.html
+++ b/مسلسل محارب.html
@@ -379,11 +379,15 @@ bXA0P3Jsa2V5PXU3a3RwbWZ0OWZlZ3ZxNGlzODA3ZGs0MDkmZGw9MA==#Intent;scheme=xmtv;pack
                         <div class="number-container">  <div> 
 <img class="watched-icon" src="https://static.thenounproject.com/png/1970476-200.png" alt="Watched Icon" style="display: none;"></div>
 
-                                        <a href="intent://aHR0cHM6Ly9kbC5kcm9wYm94LmNvbS9zY2wvZmkvbnI5cW9pbzE5cmRhOGJtaWljd2JzLzQtSEQu
-bXA0P3Jsa2V5PTYxcWo5NnhoMGpmbzBmeGNmcHd2cWR4c3UmZGw9MA==#Intent;scheme=xmtv;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">hd</div></a>
+                                        <a href="intent://aHR0cHM6Ly9wcmV2aWV3cy5kcm9wYm94LmNvbS9wL2hsc19tYXN0ZXJfcGxheWxpc3QvQUNOeWxJ
+Z3IzWkx1MmJIS1lPZW5yX2hBNHpySXVuMWh1M1dNcnV6WXM2OWVQUDUyWjhwMTdmQnNzZlJ6Vzhq
+TkppUDVDZ3lGQ3AtdzVlc0w2eklGTVk2QW52SHdjVk9ZN2JnaG02cDhUZ0lMYUtkUGpfM3lHWFJ5
+VEIzNHR1NmhBTl9tT01wcThXM2FDdHY0b1lCenI0a3ZQRTRPUHM2VlhEdEJkZENMV2dBR0lkeDFx
+ZjZGZlpoZEt3VDR2c04yaFl2SmFDUzRlaUhmQnl2ZDl4NnVMMDJlWHhlQUUzczBxNkxGQ2pIR2xh
+VzNCNUszaENpdjBjSnVqV1VPTnQtaTAxaS1FRlJqVmJsOHhlSTNPRGNTbFlfOGF1TGU1ZUpFSFFp
+eFd5Q3d4QU9TSGcvcC5tM3U4#Intent;scheme=xmtv;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">hd</div></a>
 
-                <a href="intent://aHR0cHM6Ly9kbC5kcm9wYm94LmNvbS9zY2wvZmkvbnI5cW9pbzE5cmRhOGJtaWljd2JzLzQtSEQu
-bXA0P3Jsa2V5PTYxcWo5NnhoMGpmbzBmeGNmcHd2cWR4c3UmZGw9MA==#Intent;scheme=xmtv;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number" >1</div></a>                          
+                <a href="https://dl.dropbox.com/scl/fi/nr9qoio19rda8bmiicwbs/4-HD.mp4?rlkey=61qj96xh0jfo0fxcfpwvqdxsu&dl=0"><div id="remot" tabindex="1" class="number" >1</div></a>                          
                                               <a href="intent://aHR0cHM6Ly9kbC5kcm9wYm94LmNvbS9zY2wvZmkvbnI5cW9pbzE5cmRhOGJtaWljd2JzLzQtSEQu
 bXA0P3Jsa2V5PTYxcWo5NnhoMGpmbzBmeGNmcHd2cWR4c3UmZGw9MA==#Intent;scheme=xmtv;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number" >2</div></a> 
     </div ></button>
@@ -394,11 +398,16 @@ bXA0P3Jsa2V5PTYxcWo5NnhoMGpmbzBmeGNmcHd2cWR4c3UmZGw9MA==#Intent;scheme=xmtv;pack
                         <!-- إضافة شكل الأرقام الدائرية -->
                         <div class="number-container">  <div> 
 <img class="watched-icon" src="https://static.thenounproject.com/png/1970476-200.png" alt="Watched Icon" style="display: none;"></div>
+<a href="intent://aHR0cHM6Ly9wcmV2aWV3cy5kcm9wYm94LmNvbS9wL2hsc19tYXN0ZXJfcGxheWxpc3QvQUNPVGZm
+YWxvYW1QcE1JcTJxbURFeW1TNkZLYlYzNXUzZ0NzaWFyQnBKYzZpZUZJbkFvQmxqZlNmTnQzS003
+WnVTeFFqRTdNRFdLZmpWT3c2amRrZy0zU3FncFZIdVI2Y0RMbENUVlFVTnNQbERWblNkQzRLNUFH
+VHpTRlNkRDlNWF9qcDc1YjZySERLNW5VaE54eEFUdVZiNEJhWlpCSjJyVnRUUXhnLXJDWTBlWHJq
+ZkU2SWszVnpvS1dkVnQ1T2VsQkYzbGJmenZ5T3VQV3NKbnhZamxjbFZhWGlyWHVtc2toOXhCZXVB
+YlVfVW0tdXRwWElTM1dxMzB6Y0NBY0o4U0NTRVg2NGRYcnlZUW5obE5YWWdfbUN3LWZpS0RQZGVq
+STQ2aEt3M1FWekEvcC5tM3U4#Intent;scheme=xmtv;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">hd</div></a>
 
-                                        <a href="intent://aHR0cHM6Ly9kbC5kcm9wYm94LmNvbS9zY2wvZmkvOHMyaXRta201cHk0Zjd5dHB3M25pLzUtSEQu
-bXA0P3Jsa2V5PXZ5aXc3MnFkcm5uOXpnM2tyNDNmazk2N2YmZGw9MA==#Intent;scheme=xmtv;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">hd</div></a>
-
-<a href="https://hd1.hd-cdn.xyz/embed-hkbmrpudh2ds.html"><div id="remot" tabindex="1" class="number" >1</div></a>                          
+<a href="intent://aHR0cHM6Ly9kbC5kcm9wYm94LmNvbS9zY2wvZmkvOHMyaXRta201cHk0Zjd5dHB3M25pLzUtSEQu
+bXA0P3Jsa2V5PXZ5aXc3MnFkcm5uOXpnM2tyNDNmazk2N2YmZGw9MA==#Intent;scheme=xmtv;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number" >1</div></a>                          
 <a href="https://hd1.hd-cdn.xyz/embed-hkbmrpudh2ds.html"><div id="remot" tabindex="1" class="number" >2</div></a> 
     </div ></button>     
   
@@ -409,8 +418,14 @@ bXA0P3Jsa2V5PXZ5aXc3MnFkcm5uOXpnM2tyNDNmazk2N2YmZGw9MA==#Intent;scheme=xmtv;pack
                         <div class="number-container">  <div> 
 <img class="watched-icon" src="https://static.thenounproject.com/png/1970476-200.png" alt="Watched Icon" style="display: none;"></div>
 
-                                        <a href="intent://aHR0cHM6Ly9kbC5kcm9wYm94LmNvbS9zY2wvZmkvNW81OTNsaDNiam1xMGV3MmoyM3ZnLzYtSEQu
-bXA0P3Jsa2V5PW53N2x5a3JpY3Q1Z2ljeThpcWRsazBoMnomZGw9MA==#Intent;scheme=xmtv;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">hd</div></a>
+                                        <a href="intent://aHR0cHM6Ly9wcmV2aWV3cy5kcm9wYm94LmNvbS9wL2hsc19tYXN0ZXJfcGxheWxpc3QvQUNQQUdK
+OXg2MFB6Vk1jSllwUnZ3WWM2em04X2hreGtEYXpaY3NsbXdCOEQxajYtSm9rekluOTJLdTBILUhT
+VzVRSG9nMVpJaGl1cDJvRkJkZGNYcDU1R2hWaWs5TmZiZ3lWNjhfNWF4UWdkdm11T3I4V1pPMXpC
+Wm9PZmw0Y3hUakN1b29YVXY4Ri1nTGJqM1I3VEZ4d1B5aWR2UGhWTEJDRDdWQVNJeWJDWGlXQlpJ
+Q2t1R1paX3hjbzRhci1FbHk4dWtNVVVrLTdBZXRNY1cyTGRrcnVzMlREbm5vTk1tZzA2YWVWdXdB
+QnFBUS9wLm0zdTg=#Intent;scheme=xmtv;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">hd</div></a>
+
+<a href="https://dl.dropbox.com/scl/fi/5o593lh3bjmq0ew2j23vg/6-HD.mp4?rlkey=nw7lykrict5gicy8iqdlk0h2z&dl=0"><div id="remot" tabindex="1" class="number" >0</div></a> 
 
 <a href="https://hd1.hd-cdn.xyz/embed-ualrszb6to5f.html"><div id="remot" tabindex="1" class="number" >1</div></a>                          
 <a href="https://vk.com/video_ext.php?oid=828807734&id=456241717"><div id="remot" tabindex="1" class="number" >2</div></a> 
