--- a/مسلسل العتاولة.html
+++ b/مسلسل العتاولة.html
@@ -449,8 +449,11 @@ bWt2P3Jsa2V5PWhza2xzYjJwMnoxcTZucGR3Z3owcTA4ZmgmZGw9MA==
                         <div class="number-container">  <div> 
 <img class="watched-icon" src="https://static.thenounproject.com/png/1970476-200.png" alt="Watched Icon" style="display: none;"></div>
 
-<a href="intent://https://dl.dropbox.com/scl/fi/3z4fqfxlmkflnxx3bpulr/7.mp4?rlkey=vw0nzfye9zecszubn2rkkrrin&dl=0
+<a href="intent://aHR0cHM6Ly9kbC5kcm9wYm94LmNvbS9zY2wvZmkvM3o0ZnFmeGxta2Zsbnh4M2JwdWxyLzcubXA0
+P3Jsa2V5PXZ3MG56ZnllOXplY3N6dWJuMnJra3JyaW4mZGw9MA==
 #Intent;scheme=xmtv;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number">hd</div></a>
+
+<a href="https://dl.dropbox.com/scl/fi/3z4fqfxlmkflnxx3bpulr/7.mp4?rlkey=vw0nzfye9zecszubn2rkkrrin&dl=0"><div id="remot" tabindex="1" class="number">0</div></a>
 
 <a href="https://egbist.com/embed-play/1019245"><div id="remot" tabindex="1" class="number">1</div></a>
 
