--- a/مسلسل محارب.html
+++ b/مسلسل محارب.html
@@ -431,7 +431,27 @@ QnFBUS9wLm0zdTg=#Intent;scheme=xmtv;package=co.wuffy.player;end "><div id="remot
 <a href="https://vk.com/video_ext.php?oid=828807734&id=456241717"><div id="remot" tabindex="1" class="number" >2</div></a> 
     </div ></button>  
     
-    
+  <button class="button"><img src="https://i.imgur.com/acfqMQo.jpg" alt="app tv">
+        <div class="lkhat1"> episode-7</div>
+   <div class="khlfia">  سيرفرات المشاهدة</div> 
+                        <!-- إضافة شكل الأرقام الدائرية -->
+                        <div class="number-container">  <div> 
+<img class="watched-icon" src="https://static.thenounproject.com/png/1970476-200.png" alt="Watched Icon" style="display: none;"></div>
+
+
+                                        <a href="intent://aHR0cHM6Ly9mZDI4MC5yZXZpZXctZGwuc3RvcmUvZC9ubXFpa3g1c2Zzcm51d2Z1Mmo2bmJ6aGZ2
+a2hldHdsbXhlMnhtNjQ3eHlhamY1M2RjNGNmdnVieXNhZ3RkZm94ZWZ4aHZtcXEvW2FyYWJzZWVk
+XS5Nb2hhcmViLkVwMDcuNzIwcC5tcDQ=#Intent;scheme=xmtv;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">hd</div></a>
+
+<a href="intent://aHR0cHM6Ly9mZDI4MC5yZXZpZXctZGwuc3RvcmUvZC9ubXFpbXg1c2Zzcm51d2Z1Mmo2bmg2aHQ2
+emdkdjNuczNycWh1cjVwejRyamN4dzNkd2V5dm1mNTVhcHB3Nm01cW9pM2EyM2ovdmlkZW8ubXA0#Intent;scheme=xmtv;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number" >1</div></a> 
+
+<a href="intent://aHR0cHM6Ly9kZWxpdmVyeS1ub2RlLWpzZ2Znb2U5N2ZhNzR3ODAudm9lLW5ldHdvcmsubmV0L2Vu
+Z2luZS9obHMyLWMvMDEvMTA4NjcvbWhmN3Nic2Jqa3d6XyxsLC51cmxzZXQvbWFzdGVyLm0zdTg/
+dD1fWXFEUFUwSkdhcGwzNGx1ZjJiRjcxUkt2b1BRcEZ5Uk14NDNBQXcwWWxFJnM9MTcxMDY5MTE3
+MCZlPTE0NDAwJmY9NTQzMzU3ODYmbm9kZT1kZWxpdmVyeS1ub2RlLXYyYmluNGthZ3d3cG5obXcu
+dm9lLW5ldHdvcmsubmV0Jmk9MTk2LjEyNyZzcD0yNTAwJmFzbj0zNjkyNQ==#Intent;scheme=xmtv;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number" >2</div></a> 
+    </div ></button>    
   </div> 
 </div>
 </div>
