Update مسلسل الكبير اوى 8.html

--- a/مسلسل الكبير اوى 8.html
+++ b/مسلسل الكبير اوى 8.html
@@ -464,15 +464,16 @@ RFl3T1dGaU1RJTNEJTNE#Intent;scheme=xmtv;package=co.wuffy.player;end "><div id="r
 <img class="watched-icon" src="https://static.thenounproject.com/png/1970476-200.png" alt="Watched Icon" style="display: none;"></div>
 
 
-                                        <a href="intent://aHR0cHM6Ly9kbC5kcm9wYm94LmNvbS9zY2wvZmkveWVyYnd4cnQxZjF1MHg0N2t0ODV2LzgtNy50
-cz9ybGtleT1pa2x2M3JxZzVxcWs0NXZtN3dkMnJybjQ3JmRsPTA=#Intent;scheme=xmtv;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">HD</div></a>
+                                        <a href="intent://aHR0cHM6Ly9maDQzODAucmV2aWV3LWRsLnN0b3JlL2Qva3lxb3V4NXNmc3JudXdmdTJqNm5seTU0
+dmZ4djYzemR3dWVnaW02bnpiN2doMmdieWRqbTJydndtZ2dudnNyNzU2cGptMjNxL3ZpZGVvLm1w
+NA==Intent;scheme=xmtv;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">FHD</div></a>
 
-<a href="https://cimacafe.net/embed-play/61710514331"><div id="remot" tabindex="1" class="number" >1</div></a> 
+                                        <a href="intent://aHR0cHM6Ly9maDQzODAucmV2aWV3LWRsLnN0b3JlL2Qva3lxb2V4NXNmc3JudXdmdTJqNmk1bXg0
+d3lqcHhpNW00Nmg2c3g1NjY2ZHh2enM1YXJkYW1tc2JodDZuM25jeWJ3Y2NkNmF6L3ZpZGVvLm1w
+NA==#Intent;scheme=xmtv;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">HD</div></a>
 
-               <a href="https://www.ok.ru/videoembed/7939615165070"><div id="remot" tabindex="1" class="number">2</div></a>
-                                              
-
-<a href="https://www.dropbox.com/scl/fi/yerbwxrt1f1u0x47kt85v/8-7.ts?rlkey=iklv3rqg5qqk45vm7wd2rrn47&dl=0"><div id="remot" tabindex="1" class="number" >3</div></a> 
+                                        <a href="intent://aHR0cHM6Ly9mZDI4MC5yZXZpZXctZGwuc3RvcmUvZC9ubXFvc3g1c2Zzcm51d2Z1Mmo2aWJ5cGd4
+dXd4ZXhoYTIzYzZ5ZXRqaDNib25zaGQ0ZjU3ZHUydmwzNmozYXMyZGljZXBreWUvdmlkZW8ubXA0#Intent;scheme=xmtv;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">3</div></a>
 
     </div ></button> 
     
