--- a/مسلسل بيت الرفاعى.html
+++ b/مسلسل بيت الرفاعى.html
@@ -425,13 +425,17 @@ dHM/cmxrZXk9cHJ4ZzNhZWl3ZXhoMHlpYnZ2MmVuczNkZSZkbD0w#Intent;scheme=xmtv;package=
                         <!-- إضافة شكل الأرقام الدائرية -->
                         <div class="number-container">  <div> 
 <img class="watched-icon" src="https://static.thenounproject.com/png/1970476-200.png" alt="Watched Icon" style="display: none;"></div>
-   <a href="intent://aHR0cHM6Ly9kbC5kcm9wYm94LmNvbS9zY2wvZmkvMGVqcWQyejczODB4NXZmNnNrb2JvLzMtSEQu
-bXA0P3Jsa2V5PTI5dG0yMWZhdnp2YXdubXppamh4eWE1ZDImZGw9MA==#Intent;scheme=xmtv;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">HD</div></a>
+   <a href="intent://aHR0cHM6Ly9mZDI4MC5yZXZpZXctZGwuc3RvcmUvZC9ubXFtcXg1c2Zzcm51d2Z1Mmo2am5wcGZ4
+MmN0b3lxNWR4d3kzdW01N3RsNmQ2cHR5a293cXd4ZTJjdjRucTR5NWV3M2VtZWYvdmlkZW8ubXA0#Intent;scheme=xmtv;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">FHD</div></a>
 
-<a href="https://hd1.hd-cdn.xyz/embed-4kn8go1f759n.html"><div id="remot" tabindex="1" class="number" >1</div></a> 
-                              
- <a href="https://cimacafe.net/embed-play/61710514534"><div id="remot" tabindex="1" class="number" >2</div></a>                          
-    </div ></button>  
+  <a href="intent://aHR0cHM6Ly9maDQzODAucmV2aWV3LWRsLnN0b3JlL2Qva3lxbXV4NXNmc3JudXdmdTJqNmpucHA1
+dXJ6ZG83bGhjbjN1MnZuZHp2NTc0cjNvYjdoajVhNG9wdGkzd2M3em5vNnBsZTdiL3ZpZGVvLm1w
+NAo=#Intent;scheme=xmtv;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">HD</div></a>
+
+ <a href="intent://aHR0cHM6Ly9mZDI4MC5yZXZpZXctZGwuc3RvcmUvZC9ubXFtd3g1c2Zzcm51d2Z1Mmo2amYzN2J4
+YjdiZmNxeHRic3V6dmZ5Z2dzdmlwZHB6dG1ncGxldWhuMmhrd2ptYXQ1b3dsZmQvdmlkZW8ubXA0
+#Intent;scheme=xmtv;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">SD</div></a>
+</div ></button>  
       
   </div> 
          </div>
