--- a/مسلسل العتاولة.html
+++ b/مسلسل العتاولة.html
@@ -462,6 +462,31 @@ P3Jsa2V5PXZ3MG56ZnllOXplY3N6dWJuMnJra3JyaW4mZGw9MA==
              <!-- +++++++++++++++++++++ -->
 
 
+<button class="button"><img src="https://shahid.mbc.net/mediaObject/2024/RAMADAN_OFFICIAL/Poster_Al_Atawla_ar/original/Poster_Al_Atawla_ar.jpg?version=1&type=webp" alt="app tv">
+        <div class="lkhat1"> episode-8</div>
+   <div class="khlfia">  سيرفرات المشاهدة</div> 
+                        <!-- إضافة شكل الأرقام الدائرية -->
+                        <div class="number-container">  <div> 
+<img class="watched-icon" src="https://static.thenounproject.com/png/1970476-200.png" alt="Watched Icon" style="display: none;"></div>
+
+<a href="intent://aHR0cHM6Ly9maDQzODAucmV2aWV3LWRsLnN0b3JlL2Qva3lxbWl4NXNmc3JudXdmdTJqNmk1Nnhz
+dTR2ZnI1cTM2dmlwd3FsbWlxYXRpZ2RhbHAzeWhheHluNnJtdXNtY2xicXlnN3FiL3ZpZGVvLm1w
+NA==
+#Intent;scheme=xmtv;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number">Fhd</div></a>
+
+<a href="intent://aHR0cHM6Ly9maDQzODAucmV2aWV3LWRsLnN0b3JlL2Qva3lxbWl4NXNmc3JudXdmdTJqNmk1Nnhz
+dTR2ZnI1cTM2dmlwd3FsbWlxYXRpZ2RhbHAzeWhheHluNnJtdXNtY2xicXlnN3FiL3ZpZGVvLm1w
+NA==
+#Intent;scheme=xmtv;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number">hd</div></a>
+
+<a href="intent://aHR0cHM6Ly9maDQzODAucmV2aWV3LWRsLnN0b3JlL2Qva3lxbWl4NXNmc3JudXdmdTJqNmk1Nnhz
+dTR2ZnI1cTM2dmlwd3FsbWlxYXRpZ2RhbHAzeWhheHluNnJtdXNtY2xicXlnN3FiL3ZpZGVvLm1w
+NA==
+#Intent;scheme=xmtv;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number">SD</div></a>
+
+
+    </div ></button>  
+             <!-- +++++++++++++++++++++ -->
   </div> 
          </div>
         </div>
