Update رامز جاب من الآخر.html

--- a/رامز جاب من الآخر.html
+++ b/رامز جاب من الآخر.html
@@ -351,14 +351,112 @@ OTYzNQ==#Intent;scheme=xmtv;package=co.wuffy.player;end "><div id="remot" tabind
                         <div class="number-container">  <div> 
 <img class="watched-icon" src="https://static.thenounproject.com/png/1970476-200.png" alt="Watched Icon" style="display: none;"></div>
 
-                   <a href="intent://aHR0cHM6Ly9kbC5kcm9wYm94LmNvbS9zY2wvZmkvMTh0djV5NWJocG1sNnFuMm9zcDRvL1NlZS12
-aWRlby1sYXJvemEubmV0LS4tMi1vbi1PSy4tVmlkZW8tUGxheWVyLm1wND9ybGtleT16Z2J4YXJ0
-YW1kYnJkNXFvaThwM2hwbWMyJmRsPTA=#Intent;scheme=xmtv;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number" >hd</div></a>
+                   <a href="intent://aHR0cHM6Ly9mZDI4MC5yZXZpZXctZGwuc3RvcmUvZC9ubXFtNnV2c2Zzcm51d2Z1Mm42bmYycGp2
+endpZmp3NTV1bnQzbjd6MjVhNjJtNHQ2cXh1YjJhZjRzYXQybHMycnR5bmRxYW4vdmlkZW8ubXA0
+#Intent;scheme=xmtv;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number" >fhd</div></a>
 
-<a href="https://p4.hd-cdn.xyz/embed-nqigells6zw9.html"><div id="remot" tabindex="1" class="number" >1</div></a>
+<a href="intent://aHR0cHM6Ly9mZDI4MC5yZXZpZXctZGwuc3RvcmUvZC9ubXFtcXV2c2Zzcm51d2Z1Mm42bnBvNzZ2
+azRlcXpycnltb3BiM254YjJ1ZjRtZmtkNWIyZm03NHFhNHJ5Z2N4NWtta3JwZzYvdmlkZW8ubXA0#Intent;scheme=xmtv;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number" >hd</div></a>
 
-<a href="https://qwe4.viidhdr.shop/embed-6cby4uc798w2.html"><div id="remot" tabindex="1" class="number">2</div></a>
+<a href="intent://aHR0cHM6Ly9mZDI4MC5yZXZpZXctZGwuc3RvcmUvZC9ubXFtc3V2c2Zzcm51d2Z1Mm42amhwaHV2
+b3ZrNmRtY3ZwcHBqcGZraXRrY2NpZGFvZWp3Z2Rkazd1YXdvMmI0dXA3ZGF0ZGIvdmlkZW8ubXA0#Intent;scheme=xmtv;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number">sd</div></a>
     </div ></button>    
+
+ <button class="button"><img src="https://i.imgur.com/VbtSYFC.png" alt="app tv">
+        <div class="lkhat1">الحلقة-3</div>
+   <div class="khlfia">  سيرفرات المشاهدة</div> 
+                        <!-- إضافة شكل الأرقام الدائرية -->
+                        <div class="number-container">  <div> 
+<img class="watched-icon" src="https://static.thenounproject.com/png/1970476-200.png" alt="Watched Icon" style="display: none;"></div>
+
+                   <a href="intent://aHR0cHM6Ly9mZDI4MC5yZXZpZXctZGwuc3RvcmUvZC9ubXFuc3U1c2Zzcm51d2Z1Mm42aXh5aHh1
+Y2hyazdmbXljaXhiN21keGxoemxld2dpNjJzdmFoY2s1MnA0ZmR1ZHQ1bmlpejQvdmlkZW8ubXA0
+#Intent;scheme=xmtv;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number" >fhd</div></a>
+
+<a href="intent://aHR0cHM6Ly9mZDI4MC5yZXZpZXctZGwuc3RvcmUvZC9ubXFtaXU1c2Zzcm51d2Z1Mm42amZ6dnM2
+MnZrZnNyaGt0dTN5am9nMzRieGJuYm1lbnhpeTNoeTR4YzNqY3h3bzYya3RqcXYvdmlkZW8ubXA0
+#Intent;scheme=xmtv;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number" >hd</div></a>
+
+<a href="intent://aHR0cHM6Ly9mZDI4MC5yZXZpZXctZGwuc3RvcmUvZC9ubXFta3U1c2Zzcm51d2Z1Mm42aTM2N3h2
+bzdwc3ByZDRkcXhka2J0NW90bnd2Y3Q3d3V3YWZxZnhzb3hzNmgzcjNqcG0zajcvdmlkZW8ubXA0#Intent;scheme=xmtv;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number">sd</div></a>
+    </div ></button>    
+ 
+
+ <button class="button"><img src="https://i.imgur.com/VbtSYFC.png" alt="app tv">
+        <div class="lkhat1">الحلقة-4</div>
+   <div class="khlfia">  سيرفرات المشاهدة</div> 
+                        <!-- إضافة شكل الأرقام الدائرية -->
+                        <div class="number-container">  <div> 
+<img class="watched-icon" src="https://static.thenounproject.com/png/1970476-200.png" alt="Watched Icon" style="display: none;"></div>
+
+                   <a href="intent://aHR0cHM6Ly9mZDI4MC5yZXZpZXctZGwuc3RvcmUvZC9ubXFuMnhmc2Zzcm51d2Z1Mm42aWJ5eHV1
+Znh3ZGJsb2o3bzNsdmRwYW8yZ21tcGpvbGc2a2JxaW5reDQ2bmhlcjZmcDNyc24vdmlkZW8ubXA0#Intent;scheme=xmtv;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number" >fhd</div></a>
+
+<a href="intent://aHR0cHM6Ly9maDQzODAucmV2aWV3LWRsLnN0b3JlL2Qva3lxbnl4ZnNmc3JudXdmdTJuNm5wb3Bt
+N2R2ZnVqaW53cnJwMmFrZW52c3FyZjN3ZzJ5dXNtNnN4eXpoZjQ3N253c2V3b29wL3ZpZGVvLm1w
+NA==#Intent;scheme=xmtv;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number" >hd</div></a>
+
+<a href="intent://aHR0cHM6Ly9mZDI4MC5yZXZpZXctZGwuc3RvcmUvZC9ubXFuNHhmc2Zzcm51d2Z1Mm42aWQzdnY3
+NmYzajd6dHp1ZDdkeHhpMnk1MnM2dGxjeGxjbmhidnF6aG9ibmt4MzRnYnkzdmMvdmlkZW8ubXA0
+#Intent;scheme=xmtv;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number">sd</div></a>
+    </div ></button>   
+    
+  <button class="button"><img src="https://i.imgur.com/VbtSYFC.png" alt="app tv">
+        <div class="lkhat1">الحلقة-5</div>
+   <div class="khlfia">  سيرفرات المشاهدة</div> 
+                        <!-- إضافة شكل الأرقام الدائرية -->
+                        <div class="number-container">  <div> 
+<img class="watched-icon" src="https://static.thenounproject.com/png/1970476-200.png" alt="Watched Icon" style="display: none;"></div>
+
+                   <a href="intent://aHR0cHM6Ly9mZDI4MC5yZXZpZXctZGwuc3RvcmUvZC9ubXFkZXh2c2Zzcm51d2Z1Mm42anA2aHd1
+a3BldWFmNnRpNHl4ZzR1b3dmc2tpcHN3dWptY3k3dXpzNXVpYjV0NXlzM3BhZWwvdmlkZW8ubXA0#Intent;scheme=xmtv;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number" >fhd</div></a>
+
+<a href="intent://aHR0cHM6Ly9mZDI4MC5yZXZpZXctZGwuc3RvcmUvZC9ubXFkY3h2c2Zzcm51d2Z1Mm42bmYzeHV4
+dXM1bm51d2VudHdsdTc2NDd2bTZ2cng1dTJsaHVhaXllZHlyaG8zZnZyYXQzNXkvW2FyYWJzZWVk
+XS5SYW1lei5HYWIuTWluLkVsLkFraGVyLkVwMDUuNzIwcC5tcDQ=#Intent;scheme=xmtv;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number" >hd</div></a>
+
+<a href="intent://aHR0cHM6Ly9mZDI4MC5yZXZpZXctZGwuc3RvcmUvZC9ubXFkZXh2c2Zzcm51d2Z1Mm42anA2aHd1
+a3BldWFmNnRpNHl4ZzR1b3dmc2tpcHN3d21pdTJsbG1weXNhbmtmaHFsdW9peWcvdmlkZW8ubXA0#Intent;scheme=xmtv;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number">sd</div></a>
+    </div ></button>    
+ 
+   <button class="button"><img src="https://i.imgur.com/VbtSYFC.png" alt="app tv">
+        <div class="lkhat1">الحلقة-6</div>
+   <div class="khlfia">  سيرفرات المشاهدة</div> 
+                        <!-- إضافة شكل الأرقام الدائرية -->
+                        <div class="number-container">  <div> 
+<img class="watched-icon" src="https://static.thenounproject.com/png/1970476-200.png" alt="Watched Icon" style="display: none;"></div>
+
+                   <a href="intent://aHR0cHM6Ly9maDQzODAucmV2aWV3LWRsLnN0b3JlL2Qva3lxbXN4dnNmc3JudXdmdTJuNmpqMzV1
+N2NlbWNjYXltNjIzenh6b29jN2k3eGp3aW00aXc1d3YyeGZ3em92Mmp1N3dpd3lsL3ZpZGVvLm1w
+NA==#Intent;scheme=xmtv;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number" >fhd</div></a>
+
+<a href="intent://aHR0cHM6Ly9maDQzODAucmV2aWV3LWRsLnN0b3JlL2Qva3lxbXN4dnNmc3JudXdmdTJuNmpqMzV1
+N2NlbWNjYXltNjIzenh6b29jN2k3eGp3aW00aXc1d3YyeGZ3em92Mmp1N3dpd3lsL3ZpZGVvLm1w
+NA==#Intent;scheme=xmtv;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number" >hd</div></a>
+
+<a href="intent://aHR0cHM6Ly9maDQzODAucmV2aWV3LWRsLnN0b3JlL2Qva3lxbXN4dnNmc3JudXdmdTJuNmpqMzV1
+N2NlbWNjYXltNjIzenh6b29jN2k3eGp3aXBwdWptNmxka3o0N3hjZ3E3M3F5bG1yL1thcmFic2Vl
+ZF0uUmFtZXouR2FiLk1pbi5FbC5Ba2hlci5FcDA2LjEwODBwLm1wNA==#Intent;scheme=xmtv;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number">sd</div></a>
+    </div ></button> 
+    <button class="button"><img src="https://i.imgur.com/VbtSYFC.png" alt="app tv">
+        <div class="lkhat1">الحلقة-7</div>
+   <div class="khlfia">  سيرفرات المشاهدة</div> 
+                        <!-- إضافة شكل الأرقام الدائرية -->
+                        <div class="number-container">  <div> 
+<img class="watched-icon" src="https://static.thenounproject.com/png/1970476-200.png" alt="Watched Icon" style="display: none;"></div>
+
+                   <a href="intent://aHR0cHM6Ly9mZDI4MC5yZXZpZXctZGwuc3RvcmUvZC9ubXFtNHg1c2Zzcm51d2Z1Mmo2bjc2NXg3
+dWpuYzR3d2R5emNjaWtpc2sybnc2N3RxY21vcnBkbzR3YWFhd3FmZDY0czVhZncvdmlkZW8ubXA0
+#Intent;scheme=xmtv;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number" >fhd</div></a>
+
+<a href="intent://aHR0cHM6Ly9maDQzODAucmV2aWV3LWRsLnN0b3JlL2Qva3lxbTZ4NXNmc3JudXdmdTJqNmpmNjc0
+dWx0ZXZ1eGFwd2VyYzNtN2F0eWRyenJjeWdkMnZjY3k0Mm5wMmZocGc3aW1vcGl2L1thcmFic2Vl
+ZF0uUmFtZXouR2FiLk1pbi5FbC5Ba2hlci5FcDA3Lm1wNA==#Intent;scheme=xmtv;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number" >hd</div></a>
+
+<a href="intent://aHR0cHM6Ly9mZDI4MC5yZXZpZXctZGwuc3RvcmUvZC9ubXFtNHg1c2Zzcm51d2Z1Mmo2bjc2NXg3
+dWpuYzR3d2R5emNjaWtpc2sybnc2N3RxY21vcnBkbzR3YWFhd3FmZDY0czVhZncvdmlkZW8ubXA0
+#Intent;scheme=xmtv;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number">sd</div></a>
+    </div ></button> 
  
   </div> 
          </div>
